# dual-db-chatbot

./: README.md  pyproject.toml
src/ai_chatbot/: crew.py  main.py
src/ai_chatbot/config/: agents.yaml  tasks.yaml
src/ai_chatbot/tools/: __init__.py  custom_tool.py
